--- a/wigner-symbols.cabal
+++ b/wigner-symbols.cabal
@@ -26,6 +26,7 @@ flag llvm
 
 library
   exposed-modules:     WignerSymbols
+                       WignerSymbols.Internal
   build-depends:       base >=4 && <5
   hs-source-dirs:      src
   default-language:    Haskell2010
