--- a/wigner-symbols.cabal
+++ b/wigner-symbols.cabal
@@ -27,6 +27,7 @@ flag llvm
 library
   exposed-modules:     WignerSymbols
                        WignerSymbols.Internal
+  other-extensions:    CPP
   build-depends:       base >=4 && <5
   hs-source-dirs:      src
   default-language:    Haskell2010
@@ -51,6 +52,8 @@ benchmark bench
   build-depends:       base
                      , wigner-symbols
                      , criterion >=1.0 && <2
+                     , random >=1.1 && <1.2
+                     , vector >=0.10 && <0.12
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -Wall
