--- a/wigner-symbols.cabal
+++ b/wigner-symbols.cabal
@@ -58,6 +58,7 @@ benchmark bench
                      , wigner-symbols
                      , criterion >=1.0 && <2
                      , random >=1.1 && <1.2
+                     , primitive >=0.5.0.1 && <0.7
                      , vector >=0.10 && <0.12
   hs-source-dirs:      src
   default-language:    Haskell2010
