--- a/wigner-symbols.cabal
+++ b/wigner-symbols.cabal
@@ -1,10 +1,8 @@
 name:                wigner-symbols
 version:             1.0.0
-synopsis:            Clebsch-Gordan coefficients and Wigner 3-j, Wigner 6-j,
-                     and Wigner 9-j symbols.
-description:
-  Calculation of exact Clebsch-Gordan coefficients as well as Wigner 3-j,
-  Wigner 6-j, and Wigner 9-j symbols.
+synopsis:            CG coefficients and Wigner symbols.
+description:         Clebsch-Gordan coefficients and Wigner 3-j, 6-j, and 9-j
+                     symbols.
 homepage:            https://github.com/Rufflewind/wigner-symbols
 bug-reports:         https://github.com/Rufflewind/wigner-symbols/issues
 license:             MIT
