--- a/wigner-symbols.cabal
+++ b/wigner-symbols.cabal
@@ -14,13 +14,13 @@ category:            Math
 build-type:          Simple
 cabal-version:       >=1.10
 
+extra-source-files:
+  changelog.md
+  README.md
+
 source-repository head
   type:                git
   location:            https://github.com/Rufflewind/wigner-symbols
-
-extra-source-files:
-  changelog.md
-  README
 
 flag llvm
   description:         Use LLVM
@@ -65,3 +65,5 @@ benchmark bench
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -Wall
+  if flag(llvm)
+    ghc-options:         -fllvm
