--- a/wigner-symbols.cabal
+++ b/wigner-symbols.cabal
@@ -62,10 +62,10 @@ benchmark bench
                        ScopedTypeVariables
   build-depends:       base
                      , wigner-symbols
-                     , criterion >=1.0 && <2
-                     , random >=1.1 && <1.2
-                     , primitive >=0.5.0.1 && <0.7
-                     , vector >=0.10 && <0.12
+                     , criterion >=1.0
+                     , random >=1.1
+                     , primitive >=0.5.0.1
+                     , vector >=0.10
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -Wall
